--- a/cupcake-shop/css/styles.css
+++ b/cupcake-shop/css/styles.css
@@ -1,3 +1,34 @@
+body {
+  padding-left: 10%;
+  padding-right: 10%;
+  background-color: cornflowerblue;
+  border: solid; 
+  border-color: blueviolet;
+ }
+
+img {
+  clear: left;
+}
+
 .flashy {
-  color: pink;
+  color: pink; 
+  cursor: grab;
+  font-family: cursive;
+ }
+
+em.dead{
+  font-weight: bold;
+  color: red;
+}
+
+.best{
+  font-size: x-large;
+  font-variant: small-caps;
+  font-weight: bolder;
+  background: repeating-radial-gradient(orange, red);
+  color: white;
+}
+
+ul{
+  list-style: none;
 }
